added travis files

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
 
 
 script:
-    - docker run -e CI=true rkust/docker-react npm run test
+    - docker run -e CI=true rkurd/docker-react npm run test
     
