added travis deploy config_updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,18 @@ script:
 
 
 deploy:
+    - edge: true
     - provider: elasticbeanstalk
     - region: "us-east-2"
     - app: "docker"
     - env: "Docker-env "
     - bucket_name: "elasticbeanstalk-us-east-2-387178210594"
     - bucket_path: "docker"
+    
 
     on:
         branch: master
+
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
 
